test/corpus/procedures.txt
================================================================================
Procedures
================================================================================

proc foo {arg1 arg2} {
    echo "hello"
    echo "word$hi \$bye word"
}

--------------------------------------------------------------------------------

(source_file
  (procedure
    (simple_word)
    (arguments
      (argument
        (simple_word))
      (argument
        (simple_word)))
    (braced_word
      (command
        (simple_word)
        (word_list
          (quoted_word)))
      (command
        (simple_word)
        (word_list
          (quoted_word
            (variable_substitution
              (id))
            (escaped_character)))))))

================================================================================
Procedures with list command substitution
================================================================================

proc foo [list a b c] {
    echo "hello"
    echo "word$hi \$bye word"
}

--------------------------------------------------------------------------------

(source_file
  (procedure
    (simple_word)
    (arguments
      (command_substitution
       (command_nocomment
         (simple_word)
         (word_list_nocomment
           (simple_word)
           (simple_word)
           (simple_word)
         )
        )
      )
    )
    (braced_word
      (command
        (simple_word)
        (word_list
          (quoted_word)))
      (command
        (simple_word)
        (word_list
          (quoted_word
            (variable_substitution
              (id))
            (escaped_character)))))))


================================================================================
Complex Procedure that can through off highlighting
================================================================================

proc ftp_download {} {

    set var1 "-"
    set var2 "-"
    set var3 "-"

    log_trace "${tid}($l_sid): src: '$src' / '$src2'"



}

--------------------------------------------------------------------------------

(source_file
    (procedure
        (simple_word)
        (arguments)
        (braced_word
            (set
                (id)
                (quoted_word)
            )
            (set
                (id)
                (quoted_word)
            )
            (set
                (id)
                (quoted_word)
            )

            (command
                (simple_word)
                (word_list
                    (quoted_word
                        (variable_substitution
                            (array_index
                                (variable_substitution
                                    (id)
                                )
                            )
                        )
                        (variable_substitution
                            (id)
                        )
                        (variable_substitution
                            (id)
                        )
                    )
                )
            )
        )
    )
)
