test/corpus/vars.txt
================================================================================
3 vars
================================================================================

set var1 ""
set var2 ""
set var3 ""

--------------------------------------------------------------------------------

(source_file
  (set
    (id)
    (quoted_word)
  )
  (set
    (id)
    (quoted_word)
  )
  (set
    (id)
    (quoted_word)
  )
)
